tests/machine/x/pascal/list_nested_assign.error
fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/list_nested_assign.pas
list_nested_assign.pas(25,31) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "TArray$1$crc7ED07D64"
list_nested_assign.pas(27) Fatal: There were 1 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
